js/js.translator/testData/incremental/invalidation/typeScriptExportsPerModule/main/m.2.d.ts
type Nullable<T> = T | null | undefined
export declare function bar(): number;
export declare function box(stepId: number, isWasm: boolean): string;